Fixed spacing in friends page and brief event description
Fixed the look and spacing in friends page and changed the apostrophe in
event description to be html.

--- a/Account.css
+++ b/Account.css
@@ -100,7 +100,7 @@ h7 {
 }
 
 .profile_thumb {
-        width:70%; height:auto;
+        width:100%; height:auto;
         margin:1%;
         border-radius: 5px;
         -webkit-border-radius: 5px;
